.provarCaches/00D410000011HE0EAM/objects/rstk__solinenic__c.object
<CustomObject>
    <description>solinenic__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__solinenic_soline__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__solinenic_compname__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_acct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Non Inventory components have the ability to carry a cost value (see SOLINENIC_COST) that can become part of the Cost of Sales total for the order line.  This field carries the Credit Account used when those costs are added to the Cost of Sales. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Clearing Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Line Non-Inventory Comps</relationshipLabel>
        <relationshipName>solinenics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_altprice1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Field is used in the setting of &quot;configurable&quot; non-inventory component Alternate Price 1 portion of the rollup price for the SO Line for a product configured using the model configurator.</inlineHelpText>
        <label>Alternate Price 1</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_altprice1cc__c</fullName>
        <formula>IF(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c, rstk__solinenic_altprice1__c ,  IF( ISNULL(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__solinenic_altprice1__c , rstk__solinenic_altprice1__c * rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_altprice1hc__c</fullName>
        <formula>IF(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c ,IF( ISNULL(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__solinenic_altprice1__c, rstk__solinenic_altprice1__c/ rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c), rstk__solinenic_altprice1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_altprice2__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Field is used in the setting of &quot;configurable&quot; non-inventory component Alternate Price 2 portion of the rollup price for the SO Line for a product configured using the model configurator.</inlineHelpText>
        <label>Alternate Price 2</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_altprice2cc__c</fullName>
        <formula>IF(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c, rstk__solinenic_altprice2__c,  IF( ISNULL(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__solinenic_altprice2__c, rstk__solinenic_altprice2__c* rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_altprice2hc__c</fullName>
        <formula>IF(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c ,IF( ISNULL(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__solinenic_altprice2__c, rstk__solinenic_altprice2__c/ rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c), rstk__solinenic_altprice2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_compname__c</fullName>
        <description>This field carries the name of the component which is similar in function to the Item Number field of inventory components. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The unit cost of the component.  Non-Inventory components can optionally carry a cost value which is added to the Cost of Goods Sold for the order line. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_desc__c</fullName>
        <description>Each component carries a description value which potentially is defaulted from the Service Item (SOSERVICE) and can be overridden as desired. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_extacost__c</fullName>
        <formula>rstk__solinenic_cost__c * rstk__solinenic_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Extended Anticipated Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_extaltprice1__c</fullName>
        <formula>rstk__solinenic_altprice1__c * rstk__solinenic_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used to set the &quot;configurable&quot; non-inventory component Alternate Price 1 portion of the rollup price for the SO Line for a product configured using the model configurator. Value = Alternate Price 1 times Qty Per.</inlineHelpText>
        <label>Extended Alt Price 1</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_extaltprice2__c</fullName>
        <formula>rstk__solinenic_altprice2__c * rstk__solinenic_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used to set the &quot;configurable&quot; non-inventory component Alternate Price 2 portion of the rollup price for the SO Line for a product configured using the model configurator. Value = Alternate Price 1 times Qty Per.</inlineHelpText>
        <label>Extended Alt Price 2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_fixedqty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this component Quantity Per is fixed (not to be extended by the order Quantity). (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Fixed Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_noprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Print on Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_price__c</fullName>
        <description>The unit price (per 1) for this component.  Optionally, the Sales Order Line price can be derived by summing the price of the components. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_pricecc__c</fullName>
        <formula>IF(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c, rstk__solinenic_price__c ,  IF( ISNULL(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__solinenic_price__c , rstk__solinenic_price__c * rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Price - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_pricehc__c</fullName>
        <formula>IF(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c ,IF( ISNULL(rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) || rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0 , rstk__solinenic_price__c , rstk__solinenic_price__c / rstk__solinenic_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c), rstk__solinenic_price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Price – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_printme__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Print on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_qtyissue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As the Sales Order Line is issued (picked) the corresponding quantities on the non-inventory demand are also ‘issued’ and recorded here.  Note that no transaction actually occurs, however costs can be accumulated into the eventual COGS of the order line (see SOLINENIC_COST). (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Issued</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity per for this component (multiplied by the Order Line quantity ordered to get the Quantity Required). (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity required for this component on this order line (calculated by multiplying the Quantity Per by the Sales Order Line quantity). (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Non Inventory components can be designated as Service Components which allows the user to record the actual time used as part of the Sales Order processing. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Service Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_soline__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipName>solinenics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_uom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Each component must have a Unit of Measure specified. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit of Measure</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Line Non-Inventory Comps</relationshipLabel>
        <relationshipName>solinenics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wiptocogs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WIP to COGS Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Freight cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Freight</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Labor cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Material cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Fringe Ohd cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Labor Ohd cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Machine Ohd cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Material Ohd cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Other Landed cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Other Landed</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Subcontract Labor cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solinenic_wocstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This field is used to carry the Work Order Subcontract Material cost detail from the completed Labor Work Order to the associated Sales Order Cost of Goods Sold transaction.</inlineHelpText>
        <label>Work Order Costs, Subcontract Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Line Non-Inventory Comps</label>
    <listViews>
        <fullName>rstk__RS_SO_Line_Non_Inv_Comp</fullName>
        <columns>NAME</columns>
        <columns>rstk__solinenic_soline__c</columns>
        <columns>rstk__solinenic_compname__c</columns>
        <columns>rstk__solinenic_desc__c</columns>
        <columns>rstk__solinenic_printme__c</columns>
        <columns>rstk__solinenic_qtyper__c</columns>
        <columns>rstk__solinenic_qtyreq__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>SO Line Non-Inv Comp</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Non-Inventory Comps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__clearing_account_required</fullName>
        <active>true</active>
        <description>Clearing account required.</description>
        <errorConditionFormula>ISNULL(rstk__solinenic_acct__c) &amp;&amp; rstk__solinenic_cost__c &gt; 0</errorConditionFormula>
        <errorMessage>Clearing account required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__unit_cost_not_less_than_zero</fullName>
        <active>true</active>
        <description>Unit Cost cannot be less than zero.</description>
        <errorConditionFormula>ISNULL(rstk__solinenic_cost__c) || rstk__solinenic_cost__c &lt; 0</errorConditionFormula>
        <errorMessage>Unit Cost cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__unitprice_not_less_than_zero</fullName>
        <active>false</active>
        <description>Unit Price cannot be less than zero.</description>
        <errorConditionFormula>ISNULL(rstk__solinenic_price__c) || rstk__solinenic_price__c &lt; 0</errorConditionFormula>
        <errorMessage>unitprice_not_less_than_zero</errorMessage>
    </validationRules>
</CustomObject>